--- a/client/src/components/styles/Header.css
+++ b/client/src/components/styles/Header.css
@@ -35,6 +35,23 @@
   min-width: 30%;
 }
 
+.signIn.auth {
+  padding: 20px 0px;
+}
+
+.signIn.auth .logout {
+  background: none;
+  border: none;
+  font-size: .9em;
+  color: rgba(53,152,219,1);
+  cursor: pointer;
+}
+
+.signIn.auth .logout:hover {
+  text-decoration: underline;
+  color: rgba(41,127,184,1);
+}
+
 .toggleSignInMode {
   display: flex;
 }
