--- a/client/src/components/styles/MoveLogs.css
+++ b/client/src/components/styles/MoveLogs.css
@@ -6,6 +6,9 @@
   box-shadow: 5px 5px 30px rgba(0,0,0,.1);
   border-radius: 10px;
   border: 1px solid #ecf0f1;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .MoveLogs p {
@@ -15,7 +18,8 @@
 }
 
 .MoveLogs .logs {
-  overflow-y: auto;
+  flex: 1;
+  overflow-y: scroll;
 }
 
 .log-line {
@@ -23,6 +27,7 @@
   flex-direction: row;
   justify-content: center;
   padding: 0px 15px;
+  border-bottom: 1px dashed #ecf0f1;
 }
 
 .log-line span {
